NetBSD Problem Report #29041

From kilbi@rad.rwth-aachen.de  Fri Jan 21 21:56:55 2005
Return-Path: <kilbi@rad.rwth-aachen.de>
Received: from linus.rad.rwth-aachen.de (unknown [134.130.11.100])
	by narn.netbsd.org (Postfix) with ESMTP id 3379463B400
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 21 Jan 2005 21:56:54 +0000 (UTC)
Message-Id: <200501212156.j0LLunlL018889@mogli.lke.rad.klinikum.rwth-aachen.de>
Date: Fri, 21 Jan 2005 22:56:49 +0100 (MET)
From: Markus W Kilbinger <kilbi@rad.rwth-aachen.de>
Reply-To: kilbi@rad.rwth-aachen.de
To: gnats-bugs@netbsd.org
Subject: -current kernel compilation fails w/o COMPAT_16 on cobalt/mips
X-Send-Pr-Version: 3.95

>Number:         29041
>Category:       port-mips
>Synopsis:       -current kernel compilation fails w/o COMPAT_16 on cobalt/mips[el]
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-mips-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jan 21 21:57:00 +0000 2005
>Closed-Date:    Tue Jan 25 09:40:46 +0000 2005
>Last-Modified:  Tue Jan 25 09:40:46 +0000 2005
>Originator:     kilbi@rad.rwth-aachen.de
>Release:        NetBSD 2.99.14
>Organization:
>Environment:


System: NetBSD qube 2.99.14 NetBSD 2.99.14 (QUBE) #7: Fri Jan 21 21:24:38 MET 2005  kilbi@qube:/sys/arch/cobalt/compile/QUBE cobalt
Architecture: mipsel
Machine: cobalt
>Description:
	Recent changes to the kernel compat stuff made kernel
	compilation fail if COMPAT_16 (and/or below) is not an active
	part of the kernel's config:

	#   compile  COCHISE/copy.o
	/usr/toolchain-mipsel/bin/mipsel--netbsd-gcc -mno-abicalls -x assembler-with-cpp -traditional-cpp -D_LOCORE -Dcobalt -I. -I../../../../arch -I../../../.. -nostdinc -DMIPS3 -DMSGMNB=16384 -DMSGSSZ=64 -DMSGTQL=512 -DDIAGNOSTIC -DMIPS3_PLUS -DNMBCLUSTERS=8192 -DMAXUSERS=32 -D_KERNEL -D_KERNEL_OPT -I../../../../dist/pf -c ../../../../arch/mips/mips/copy.S
	#   compile  COCHISE/mips_machdep.o
	/usr/toolchain-mipsel/bin/mipsel--netbsd-gcc -G 0 -mno-abicalls -msoft-float -ffreestanding -pipe -O4 -mtune=r5000 -mips2 -Werror -Wall -Wno-main -Wno-format-zero-length -Wpointer-arith -Wmissing-prototypes -Wstrict-prototypes -Wno-sign-compare -fno-zero-initialized-in-bss -Dcobalt -I. -I../../../../arch -I../../../.. -nostdinc -DMIPS3 -DMSGMNB=16384 -DMSGSSZ=64 -DMSGTQL=512 -DDIAGNOSTIC -DMIPS3_PLUS -DNMBCLUSTERS=8192 -DMAXUSERS=32 -D_KERNEL -D_KERNEL_OPT -I../../../../dist/pf -c ../../../../arch/mips/mips/mips_machdep.c
	In file included from ../../../../arch/mips/mips/mips_machdep.c:153:
	mips/frame.h:51: error: field `sf_sc' has incomplete type

	*** Failed target:  mips_machdep.o
>How-To-Repeat:
	See description.
>Fix:
	Workaround: Add COMPAT_16 to kernel's config.
	Otherwise:  n/a

>Release-Note:

>Audit-Trail:
From: Matthias Drochner <M.Drochner@fz-juelich.de>
To: gnats-bugs@netbsd.org
Cc: port-mips-maintainer@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: port-mips/29041: -current kernel compilation fails w/o COMPAT_16 
 on cobalt/mips
Date: Fri, 21 Jan 2005 23:14:53 +0100

 kilbi@rad.rwth-aachen.de said:
 > 	mips/frame.h:51: error: field `sf_sc' has incomplete type 

 Can you try to build your system with that "struct sigframe"
 definition just commented out?
 This is never used afaics -- I've already removed it in my
 source tree but I'm still running some test compilations to
 make sure nothing still refers to it.

 best regards
 Matthias


From: Markus W Kilbinger <kilbi@rad.rwth-aachen.de>
To: M.Drochner@fz-juelich.de
Cc: gnats-bugs@NetBSD.org, port-mips-maintainer@NetBSD.org,
	gnats-admin@NetBSD.org
Subject: Re: port-mips/29041: -current kernel compilation fails w/o COMPAT_16
 on cobalt/mips
Date: Fri, 21 Jan 2005 23:36:08 +0100

 >>>>> "Matthias" == Matthias Drochner <M.Drochner@fz-juelich.de> writes:

     Matthias> kilbi@rad.rwth-aachen.de said:
     >> mips/frame.h:51: error: field `sf_sc' has incomplete type 

     Matthias> Can you try to build your system with that "struct
     Matthias> sigframe" definition just commented out?

 Yep: Kernel compiles fine now!

 Thanks, Markus.

From: Matthias Drochner <drochner@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/29041 CVS commit: src/sys/arch/mips
Date: Mon, 24 Jan 2005 10:03:58 +0000 (UTC)

 Module Name:	src
 Committed By:	drochner
 Date:		Mon Jan 24 10:03:58 UTC 2005

 Modified Files:
 	src/sys/arch/mips/conf: files.mips
 	src/sys/arch/mips/include: frame.h signal.h
 	src/sys/arch/mips/mips: compat_16_machdep.c

 Log Message:
 -remove definition of "struct sigframe" -- haven't found a use of it
  (should fix build problems w/o COMPAT_16 reported by Markus W Kilbinger
   per PR port-mips/29041 and by Havard Eidnes)
 -further shuffle COMPAT_* conditionals to allow COMPAT_ULTRIX
  w/o COMPAT_16


 To generate a diff of this commit:
 cvs rdiff -r1.50 -r1.51 src/sys/arch/mips/conf/files.mips
 cvs rdiff -r1.3 -r1.4 src/sys/arch/mips/include/frame.h
 cvs rdiff -r1.25 -r1.26 src/sys/arch/mips/include/signal.h
 cvs rdiff -r1.3 -r1.4 src/sys/arch/mips/mips/compat_16_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Matthias Drochner <M.Drochner@fz-juelich.de>
To: kilbi@rad.rwth-aachen.de
Cc: gnats-bugs@NetBSD.org, port-mips-maintainer@NetBSD.org,
	gnats-admin@NetBSD.org
Subject: Re: port-mips/29041: -current kernel compilation fails w/o COMPAT_16 
 on cobalt/mips
Date: Mon, 24 Jan 2005 11:14:31 +0100

 kilbi@rad.rwth-aachen.de said:
 > Yep: Kernel compiles fine now! 

 I've removed the "struct sigframe" now (after my pmax
 build completed successfully).
 Besides that, I've rearranged some more compat stuff to
 allow building COMPAT_ULTRIX without any NetBSD COMPAT
 option.
 Can you try whether your configurations still build?
 best regards
 Matthias


State-Changed-From-To: open->feedback
State-Changed-By: drochner@netbsd.org
State-Changed-When: Mon, 24 Jan 2005 10:26:42 +0000
State-Changed-Why:
this is hopefully fixed


From: Markus W Kilbinger <kilbi@rad.rwth-aachen.de>
To: M.Drochner@fz-juelich.de
Cc: gnats-bugs@NetBSD.org, port-mips-maintainer@NetBSD.org,
	gnats-admin@NetBSD.org
Subject: Re: port-mips/29041: -current kernel compilation fails w/o COMPAT_16
 on cobalt/mips
Date: Mon, 24 Jan 2005 22:11:02 +0100

 >>>>> "Matthias" == Matthias Drochner <M.Drochner@fz-juelich.de> writes:

     Matthias> kilbi@rad.rwth-aachen.de said:
     >> Yep: Kernel compiles fine now! 

     Matthias> I've removed the "struct sigframe" now (after my pmax
     Matthias> build completed successfully).
     Matthias> Besides that, I've rearranged some more compat stuff to
     Matthias> allow building COMPAT_ULTRIX without any NetBSD COMPAT
     Matthias> option.
     Matthias> Can you try whether your configurations still build?

 Yep again: I've just rebuilt kernel (and complete userland) and
 everything is running fine (w/o COMPAT_16).

 Markus.

State-Changed-From-To: feedback->closed
State-Changed-By: drochner@netbsd.org
State-Changed-When: Tue, 25 Jan 2005 09:40:46 +0000
State-Changed-Why:
submitter confirmed fix


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.