-remove definition of "struct sigframe" -- haven't found a use of it  (should fix build problems w/o COMPAT_16 reported by Markus W Kilbinger   per PR port-mips/29041 and by Havard Eidnes) -further shuffle COMPAT_* conditionals to allow COMPAT_ULTRIX  w/o COMPAT_16